--- a/resume.tex
+++ b/resume.tex
@@ -1,6 +1,6 @@
 %-------------------------
 % Resume in Latex
-% Author : Jake Gutierrez
+% Author : Caleb Tracey
 % Based off of: https://github.com/sb2nov/resume
 % License : MIT
 %------------------------
@@ -112,23 +112,13 @@
 % \end{tabular*}
 
 \begin{center}
-    \textbf{\Huge \scshape Jake Ryan} \\ \vspace{1pt}
-    \small 123-456-7890 $|$ \href{mailto:x@x.com}{\underline{jake@su.edu}} $|$ 
-    \href{https://linkedin.com/in/...}{\underline{linkedin.com/in/jake}} $|$
-    \href{https://github.com/...}{\underline{github.com/jake}}
+    \textbf{\Huge \scshape Caleb Tracey} \\ \vspace{1pt}
+    \small 207-332-0452 $|$ Portland, ME \\ \vspace{1pt}
+    \href{mailto:x@x.com}{\underline{caleb.tracey@gmail.com}} $|$ 
+    \href{https://linkedin.com/in/...}{\underline{linkedin.com/in/caleb-tracey/}} $|$
+    \href{https://github.com/...}{\underline{github.com/calebtracey}}
 \end{center}
 
-
-%-----------EDUCATION-----------
-\section{Education}
-  \resumeSubHeadingListStart
-    \resumeSubheading
-      {Southwestern University}{Georgetown, TX}
-      {Bachelor of Arts in Computer Science, Minor in Business}{Aug. 2018 -- May 2021}
-    \resumeSubheading
-      {Blinn College}{Bryan, TX}
-      {Associate's in Liberal Arts}{Aug. 2014 -- May 2018}
-  \resumeSubHeadingListEnd
 
 
 %-----------EXPERIENCE-----------
@@ -136,12 +126,19 @@
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {Undergraduate Research Assistant}{June 2020 -- Present}
-      {Texas A\&M University}{College Station, TX}
+      {Full Stack Engineer I}{November 2021 -- Present}
+      {Centene Corporation}{Portland, ME (Remote)}
       \resumeItemListStart
-        \resumeItem{Developed a REST API using FastAPI and PostgreSQL to store data from learning management systems}
-        \resumeItem{Developed a full-stack web application using Flask, React, PostgreSQL and Docker to analyze GitHub data}
-        \resumeItem{Explored ways to visualize GitHub collaboration in a classroom setting}
+        \resumeItem{Implemented GraphQL on three flagship products, reducing response times by 20\% and enhancing user experience and system performance.}
+        \resumeItem{Led conversion of three legacy Java endpoints to Go APIs, ensuring seamless deployment to both test and production Kubernetes clusters using GitLab CI pipeline. Collaborated closely with product owners to prioritize scalability and maintainability over updating legacy Java code.}
+        \resumeItem{Assisted in refactoring a customer-specific GraphQL monolith into tailored federated APIs using Apollo Federation to optimize service architecture and performance.}
+        \resumeItem{Utilized Go’s package-based design to modularize business logic across microservices, reducing repository sizes by 20-40\% and facilitating tag-based development to eliminate duplicate code and mitigate regression issues.}
+        \resumeItem{Modernized four outdated Go repositories using the facade design pattern, ensuring long-term maintainability, clarity, and raising code coverage above 90\%}
+        \resumeItem{Designed and implemented GitLab CI pipeline to migrate two legacy Java APIs from Linux Boxes to Kubernetes clusters, ensuring zero downtime through streamlined deployments with Helm and Docker. Standardized deployment procedures for improved scalability and efficiency.}
+        \resumeItem{Detected data races within concurrent codebases using Go’s testing library and Pprof profiling tool to enhance code reliability and performance.}
+        \resumeItem{Demonstrate strong collaboration skills by effectively partnering with external teams and clients to address critical issues across test and production environments, maintaining 100\% service delivery.}
+        \resumeItem{Coordinate and supervise rotational deployments every 4–6 weeks, ensuring seamless documentation, task delegation, and proactive engagement with downstream customers.}
+        \resumeItem{Assisted Business Technologies Solutions initiative by conducting presentations on remote workplace etiquette for new hires and interns, achieving an NPS of 50.}
       \resumeItemListEnd
       
 % -----------Multiple Positions Heading-----------
@@ -154,64 +151,47 @@
 %    \resumeSubHeadingListEnd
 %-------------------------------------------
 
-    \resumeSubheading
-      {Information Technology Support Specialist}{Sep. 2018 -- Present}
-      {Southwestern University}{Georgetown, TX}
-      \resumeItemListStart
-        \resumeItem{Communicate with managers to set up campus computers used on campus}
-        \resumeItem{Assess and troubleshoot computer problems brought by students, faculty and staff}
-        \resumeItem{Maintain upkeep of computers, classroom equipment, and 200 printers across campus}
-    \resumeItemListEnd
-
-    \resumeSubheading
-      {Artificial Intelligence Research Assistant}{May 2019 -- July 2019}
-      {Southwestern University}{Georgetown, TX}
-      \resumeItemListStart
-        \resumeItem{Explored methods to generate video game dungeons based off of \emph{The Legend of Zelda}}
-        \resumeItem{Developed a game in Java to test the generated dungeons}
-        \resumeItem{Contributed 50K+ lines of code to an established codebase via Git}
-        \resumeItem{Conducted  a human subject study to determine which video game dungeon generation technique is enjoyable}
-        \resumeItem{Wrote an 8-page paper and gave multiple presentations on-campus}
-        \resumeItem{Presented virtually to the World Conference on Computational Intelligence}
-      \resumeItemListEnd
-
   \resumeSubHeadingListEnd
-
-
-%-----------PROJECTS-----------
-\section{Projects}
-    \resumeSubHeadingListStart
-      \resumeProjectHeading
-          {\textbf{Gitlytics} $|$ \emph{Python, Flask, React, PostgreSQL, Docker}}{June 2020 -- Present}
-          \resumeItemListStart
-            \resumeItem{Developed a full-stack web application using with Flask serving a REST API with React as the frontend}
-            \resumeItem{Implemented GitHub OAuth to get data from user’s repositories}
-            \resumeItem{Visualized GitHub data to show collaboration}
-            \resumeItem{Used Celery and Redis for asynchronous tasks}
-          \resumeItemListEnd
-      \resumeProjectHeading
-          {\textbf{Simple Paintball} $|$ \emph{Spigot API, Java, Maven, TravisCI, Git}}{May 2018 -- May 2020}
-          \resumeItemListStart
-            \resumeItem{Developed a Minecraft server plugin to entertain kids during free time for a previous job}
-            \resumeItem{Published plugin to websites gaining 2K+ downloads and an average 4.5/5-star review}
-            \resumeItem{Implemented continuous delivery using TravisCI to build the plugin upon new a release}
-            \resumeItem{Collaborated with Minecraft server administrators to suggest features and get feedback about the plugin}
-          \resumeItemListEnd
-    \resumeSubHeadingListEnd
-
-
 
 %
 %-----------PROGRAMMING SKILLS-----------
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: Java, Python, C/C++, SQL (Postgres), JavaScript, HTML/CSS, R} \\
-     \textbf{Frameworks}{: React, Node.js, Flask, JUnit, WordPress, Material-UI, FastAPI} \\
-     \textbf{Developer Tools}{: Git, Docker, TravisCI, Google Cloud Platform, VS Code, Visual Studio, PyCharm, IntelliJ, Eclipse} \\
-     \textbf{Libraries}{: pandas, NumPy, Matplotlib}
+     \textbf{Languages and Frameworks}{: Go, Java, SQL, TypeScript/JavaScript, Spring, React} \\
+     \textbf{Developer Tools}{: GraphQL, Kubernetes, Docker, Helm, MongoDB, Dynatrace,
+     Rancher, Grafana, Kibana, Pprof} \\
+     \textbf{Technologies}{:  Git, Gitlab CI/CD, Jira, Confluence}
     }}
  \end{itemize}
+
+%-----------PROJECTS-----------
+\section{Projects}
+    \resumeSubHeadingListStart
+      \resumeProjectHeading
+          {\textbf{ConfigConnect} $|$ \emph{Go}}{Jul 2023 -- Present}
+          \resumeItemListStart
+            \resumeItem{Designed and developed a Go package for effortless API configuration and initialization. This package seamlessly reads authentication and connection details from a YAML config file, streamlining connectivity with upstream services and databases. It produces a configured Go struct with initialized methods for accessing these services.}
+          \resumeItemListEnd
+      \resumeProjectHeading
+          {\textbf{Ultrasound App UI/API} $|$ \emph{React, TS, Spring Boot, Maven, MongoDB, Docker}}{May 2020 -- Present}
+          \resumeItemListStart
+            \resumeItem{Architected, designed, and developed the React/TypeScript front-end for a training application utilized by a fellowship program at a local hospital, demonstrating proficiency in architectural considerations and user interface implementation.}
+            \resumeItem{Developed a high-performance REST API using Spring Boot, optimizing the MongoDB data model for efficient storage and back-end parsing of a large-scale collection of 3000+ MP4 files.}
+            \resumeItem{Utilized Spring Security to implement robust JWT authentication and role-based access control, ensuring secure and controlled access to the application.}
+          \resumeItemListEnd
+    \resumeSubHeadingListEnd
+
+
+
+
+%-----------EDUCATION-----------
+\section{Education}
+  \resumeSubHeadingListStart
+    \resumeSubheading
+      {Southern Maine Community College}{South Portland, ME}
+      {Associate Degree in Computer Science}{Jan. 2020 -- May 2021}
+  \resumeSubHeadingListEnd
 
 
 %-------------------------------------------
